# Tu-Ankaja

./: .gitignore  LICENSE  README.md  entropy-vault-submission.md  package.json
entropy-engine/: Cargo.toml
entropy-engine/src/: lib.rs  main.rs
entropy-engine/src/api/: mod.rs
entropy-engine/src/blockchain/: mod.rs
entropy-engine/src/crypto/: mod.rs
entropy-engine/src/drbg/: mod.rs
entropy-engine/src/errors/: mod.rs
entropy-engine/src/health/: mod.rs
entropy-engine/src/models/: mod.rs
entropy-engine/src/mqtt/: mod.rs
entropy-engine/src/otp/: mod.rs
entropy-engine/src/otp_mqtt/: mod.rs
entropy-engine/src/parser/: mod.rs
entropy-engine/src/pool/: mod.rs
entropy-engine/src/quality/: mod.rs
entropy-engine/src/security/: mod.rs
entropy-engine/src/serial/: mod.rs
entropy-engine/src/server/: mod.rs
entropy-engine/src/whitening/: mod.rs
entropy-engine/tests/: engine.rs
firmware/: Makefile
firmware/include/: entropy_vault.h
firmware/mqtt/: entropy_mqtt.ino
firmware/src/: main.c
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/animations/: timing.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  EntropyCanvas.tsx  GeneratePanel.tsx  IntegrityIndicator.tsx  LiveMetrics.tsx  NavBar.tsx  OutputCard.tsx  PipelineStats.tsx  SecurityFeed.tsx  SourceQuality.tsx
frontend/hooks/: useEntropyEngine.ts
scripts/: blockchain  check-all.sh  demo-blockchain.sh  flash-esp32.sh  mqtt_simulator.py  otp_simulator.py  setup_multichain.sh  start-wireless.sh  start_all.sh
(+15 files in other folders)
