[package]
name = "entropy-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "entropy_engine"
path = "src/lib.rs"

[[bin]]
name = "entropy-engine"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
chacha20 = "0.9"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
serialport = "4"
rumqttc = "0.24"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
ureq = "2"
